manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: 82216239-hjk
spec:
    ports:
    - port: 8080 
    selector:
        app: "82216239"
