manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "82216239-ingress"
spec:
  ingressClassName: ingress-internal
  rules:
  - host: "82216239-hjk.ce-aa.kubepia.net"
    http:
      paths:
      - path: /
        backend:
          service:
            name: 82216239-hjk
            port:
              number: 8080
        pathType: Prefix
